--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Kasra" width="80">
         </figure>
 
         <div class="info-content">
@@ -126,21 +126,33 @@
         <div class="separator"></div>
 
         <ul class="social-list">
+         
 
           <!-- <li class="social-item">
             <a href="#" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li> -->
-
           <li class="social-item">
-            <a href="thetallnerddude" class="social-link">
-              <ion-icon name="logo-telegram"></ion-icon>
+            <a href="#" class="social-link">
+              <i style='font-size:24px' class='fab'>&#xf3fe;</i>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="thetallnerddude" class="social-link">
+            <a href="linkedin.com/in/kasra-azizi-b43430152" class="social-link">
+              <ion-icon name="logo-linkedin"></ion-icon>            
+            </a>
+          </li>
+         
+          <li class="social-item">
+            <a href="#" class="social-link">
+              <ion-icon src="./assets/images/telegram-icon.svg"></ion-icon>             
+            </a>
+          </li>
+
+          <li class="social-item">
+            <a href="https://www.instagram.com/thetallnerddude" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
@@ -530,7 +542,7 @@
 
           <ol class="timeline-list">
 
-            <li class="timeline-item">
+            <!-- <li class="timeline-item">
 
               <h4 class="h4 timeline-item-title">University school of the arts</h4>
 
@@ -542,30 +554,28 @@
                 exceptur.
               </p>
 
-            </li>
+            </li> -->
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <h4 class="h4 timeline-item-title">Qazvin Islamic Azad University, Qazvin, IRAN</h4>
 
-              <span>2006 — 2007</span>
+              <span>2019 — 2022</span>
 
               <p class="timeline-text">
-                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-                omnis..
+                Studied M.Sc. Mechatronics Engineering
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <h4 class="h4 timeline-item-title">University of Mohaghegh Ardabili, Ardabil, IRAN</h4>
 
-              <span>2002 — 2004</span>
+              <span>2014 — 2019</span>
 
               <p class="timeline-text">
-                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-                magni dolores
+                Studied B.Sc. Electrical Engineering(Electronics)
                 eos.
               </p>
 
@@ -642,12 +652,26 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Web design</h5>
-                <data value="80">80%</data>
+                <h5 class="h5">Robotics</h5>
+                <data value="70">70%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
+                <div class="skill-progress-fill" style="width: 70%;"></div>
+              </div>
+
+            </li>
+
+
+            <li class="skills-item">
+
+              <div class="title-wrapper">
+                <h5 class="h5">Python</h5>
+                <data value="50">50%</data>
+              </div>
+
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 50%;"></div>
               </div>
 
             </li>
@@ -655,7 +679,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Graphic design</h5>
+                <h5 class="h5">MATLAB And SIMULINK</h5>
                 <data value="70">70%</data>
               </div>
 
@@ -668,20 +692,7 @@
             <li class="skills-item">
 
               <div class="title-wrapper">
-                <h5 class="h5">Branding</h5>
-                <data value="90">90%</data>
-              </div>
-
-              <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 90%;"></div>
-              </div>
-
-            </li>
-
-            <li class="skills-item">
-
-              <div class="title-wrapper">
-                <h5 class="h5">WordPress</h5>
+                <h5 class="h5">ROS</h5>
                 <data value="50">50%</data>
               </div>
 
@@ -691,12 +702,13 @@
 
             </li>
 
+
+
           </ul>
 
         </section>
 
       </article>
-
 
 
 
