latest commit before moving to local

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </a>
           </li> -->
           <li class="social-item">
-            <a href="#" class="social-link">
+            <a href="t.me/thetallnerddude" class="social-link">
               <i style='font-size:24px' class='fab'>&#xf3fe;</i>
             </a>
           </li>
@@ -144,12 +144,7 @@
               <ion-icon name="logo-linkedin"></ion-icon>            
             </a>
           </li>
-         
-          <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon src="./assets/images/telegram-icon.svg"></ion-icon>             
-            </a>
-          </li>
+                  
 
           <li class="social-item">
             <a href="https://www.instagram.com/thetallnerddude" class="social-link">
@@ -563,7 +558,7 @@
               <span>2019 — 2022</span>
 
               <p class="timeline-text">
-                Studied M.Sc. Mechatronics Engineering
+                M.Sc. Mechatronics Engineering
               </p>
 
             </li>
@@ -575,8 +570,7 @@
               <span>2014 — 2019</span>
 
               <p class="timeline-text">
-                Studied B.Sc. Electrical Engineering(Electronics)
-                eos.
+                B.Sc. Electrical Engineering(Electronics)             
               </p>
 
             </li>
